--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mern_stack",
   "version": "1.0.0",
   "description": "A complete React app, with the MERN stack",
-  "main": "index.js",
+  "main": "webapp.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,6 +17,11 @@
   },
   "homepage": "https://github.com/AndrewHeinke/mern_stack#readme",
   "dependencies": {
+    "babel-preset-react": "^6.11.1",
     "express": "^4.14.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.14.0",
+    "babel-preset-react": "^6.11.1"
   }
 }
